--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "python.formatting.provider": "autopep8",
-    "python.pythonPath": ".venv/bin/python3"
+    "python.formatting.provider": "autopep8"
 }
